<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_day" />

        <TextView
            style="@style/TimeTableTextView"
            android:gravity="center"
            android:text="@string/txt_working_hour" />

        <TextView
            style="@style/TimeTableTextView"
            android:gravity="end"
            android:text="@string/txt_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_monday" />

        <TextView
            android:id="@+id/textView_working_hours_monday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_monday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_tuesday" />

        <TextView
            android:id="@+id/textView_working_hours_tuesday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_tuesday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_wednesday" />

        <TextView
            android:id="@+id/textView_working_hours_wednesday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_wednesday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_thursday" />

        <TextView
            android:id="@+id/textView_working_hours_thursday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_thursday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_friday" />

        <TextView
            android:id="@+id/textView_working_hours_friday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_friday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_saturday" />

        <TextView
            android:id="@+id/textView_working_hours_saturday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_saturday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TimeTableTextView"
            android:text="@string/txt_sunday" />

        <TextView
            android:id="@+id/textView_working_hours_sunday"
            android:gravity="center"
            android:padding="@dimen/table_padding" />

        <TextView
            android:id="@+id/textView_repertoire_sunday"
            android:gravity="end"
            android:padding="@dimen/table_padding"
            android:text="@string/txt_no_repertoire" />
    </TableRow>


</TableLayout>